# dotzilla

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs  dot_benchmark.rs
src/: blas.rs  dot_avx.rs  dot_neon.rs  dot_sse.rs  dot_std.rs  dotf32.rs  dotf64.rs  dotzilla.rs  lib.rs  main.rs  native.rs  ndarray.rs  quantized.rs  utils.rs
