[package]
name = "dotzilla"
authors = ["António Leitão"]
version = "0.2.0"
description = "Native Rust implementation of efficient basic linear algebra routines"
repository = "https://github.com/antonio-leitao/dotzilla"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
rand_distr = "0.5.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
approx = "0.5"

[[bench]]
name = "benchmark"
harness = false
